--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -938,6 +938,24 @@ li.node-readmore,
   }
 } /* Homepage alert - severe */
 
+.view-filters .form-group {
+  margin-bottom: 1em;
+} /* exposed filter */
+
+.view-filters .control-label {
+  margin-left: -25px;
+  margin-bottom: .25em;
+}
+
+.view-filters .form-control {
+  margin-left: -25px;
+}
+
+.view-filters .form-submit {
+  margin-top: 1.2em;
+  margin-left: 1em;
+}
+
 .btn-info {
   margin: 7px 10px 10px 0;
   padding: 10px 20px 10px 20px;
@@ -952,7 +970,7 @@ li.node-readmore,
   transition: all .2s ease-out;
   -moz-transition: all .2s ease-out;
   -webkit-transition: all .2s ease-out;
-} /* Exposed filter */
+}
 
 .btn:hover,
 .btn:focus {
@@ -1114,6 +1132,16 @@ li.node-readmore,
   .pager li > a,
   .pager li > span {
     margin-right: 70px;
+  }
+  .view-content .table-responsive {
+    width: 112%;
+  }
+  .view-filters .form-submit {
+    margin-left: -1.5em;
+    margin-top: 0;
+  }
+  .has-glyphicons .select-wrapper:after {
+    margin-right: 1.5em;
   }
 }
 
