Reset margin-left for .view-empty p

--- a/css/style.css
+++ b/css/style.css
@@ -7037,14 +7037,14 @@ li.node-readmore,
 .author {
   margin-bottom: 2em; }
 
-.contextual-region {
-  width: 100%; }
-
 .views-element-container {
   margin-left: 25px; }
 
 .view-content {
   margin-right: 1em; }
+
+.view-empty p {
+  margin-left: 0; }
 
 .view-content .messages--warning {
   padding: 1em 1em 1em 2.5em;
