Fixed unintended inheritence conflict on .select-wrapper:after

--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1188,7 +1188,7 @@ li.node-readmore,
     margin-left: -1.5em;
     margin-top: 0;
   }
-  .has-glyphicons .select-wrapper:after {
+  .view-filters .select-wrapper:after {
     margin-right: 1.5em;
   }
 }
