--- a/css/style.css
+++ b/css/style.css
@@ -7254,7 +7254,7 @@ li.node-readmore,
   .view-filters .form-submit {
     margin-left: -1.5em;
     margin-top: 0; }
-  .has-glyphicons .select-wrapper:after {
+  .view-filters .select-wrapper:after {
     margin-right: 1.5em; } }
 
 /* ADMIN UI AND MISC. OVERRIDES */
