--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -46,6 +46,7 @@ table th,
 table td {
   padding: 15px;
   border-top: 1px solid $light-gray;
+  vertical-align: top;
 }
 
 table p,
@@ -53,6 +54,12 @@ table ul,
 table ol {
   margin-left: 0;
   margin-right: 0;
+}
+
+table td p,
+table td ul,
+table td ol {
+  vertical-align: top;
 }
 
 hr {
