--- a/css/style.css
+++ b/css/style.css
@@ -6604,7 +6604,7 @@ body > nav > div.navbar-header > button {
 .region-sidebar-second .views-element-container {
   padding: 0 1.25em 0 1.25em;
   margin-left: 0;
-  margin-right: 1em; }
+  margin-right: 0; }
 
 .well {
   padding-left: 0;
