--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -427,7 +427,7 @@ body > nav > div.navbar-header > button {
 .region-sidebar-second .views-element-container {
   padding: 0 1.25em 0 1.25em;
   margin-left: 0;
-  margin-right: 1em;
+  margin-right: 0;
 }
 
 .well {
