--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -35,7 +35,6 @@ h1, h2, h3, h4, h5, h6 {
 
 table {
   padding-bottom: 1em;
-  border: 1px solid $light-gray;
 }
 
 table th {
@@ -45,7 +44,6 @@ table th {
 table th,
 table td {
   padding: 15px;
-  border-top: 1px solid $light-gray;
   vertical-align: top;
 }
 
@@ -1522,6 +1520,9 @@ div.region.region-content > ol {
 
 #___gcse_0 > div {
   font-family: $font-family-sans-serif;
+  table td {
+    border: 1px solid #fff;
+  }
 }
 
 #gsc-iw-id1 {
@@ -1536,19 +1537,32 @@ div.region.region-content > ol {
 #gs_cb50 {
   color: $dark-gray;
   padding: .5em;
-  margin-right: -.75em;
+  margin-right: -3em;
+  margin-top: -2em;
+}
+
+#gs_tti50 {
+  vertical-align: top;
+  margin-top: -1.5em;
 }
 
 .gsst_a {
   margin-right: -1em;
 }
 
+.gsib_b {
+  display: none;
+}
+
+.gsc-search-button {
+  margin-left: 0;
+}
+
 .gsc-search-button > button {
   background-color: $brand-primary;
-  width: 52px;
-  height: 52px;
+  width: 50px;
+  height: 50px;
   padding: .5em;
-  margin-top: -1px;
 }
 
 .gsc-webResult {
@@ -1572,15 +1586,6 @@ div.region.region-content > ol {
   font-size: 1.25em;
   margin-left: -1em;
 }
-
-#___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div > div > div.gsc-expansionArea > div:nth-child(9):hover {
-  padding-bottom: 7px;
-}
-
-/* div.gsc-cursor-box.gs-bidi-start-align {
-  margin: 2em 1em 0 2px;
-  font-size: 1.25em;
-} */
 
 /* SHARE BUTTONS BLOCK */
 
