--- a/css/style.css
+++ b/css/style.css
@@ -6617,7 +6617,7 @@ body > nav > div.navbar-header > button {
     text-decoration: underline; }
 
 .well img {
-  max-width: 100%; }
+  width: 100%; }
 
 h2.block-title,
 .well img {
@@ -7361,9 +7361,12 @@ ol.breadcrumb {
 
 .paragraph--color--rgba-red-strong {
   background-color: #981e32; }
-  .paragraph--color--rgba-red-strong h2, .paragraph--color--rgba-red-strong h3, .paragraph--color--rgba-red-strong p, .paragraph--color--rgba-red-strong p.statistic, .paragraph--color--rgba-red-strong strong, .paragraph--color--rgba-red-strong blockquote {
+  .paragraph--color--rgba-red-strong h2, .paragraph--color--rgba-red-strong h3, .paragraph--color--rgba-red-strong p, .paragraph--color--rgba-red-strong p.statistic, .paragraph--color--rgba-red-strong strong, .paragraph--color--rgba-red-strong blockquote, .paragraph--color--rgba-red-strong a {
     color: #fff;
     border-color: #fff; }
+  .paragraph--color--rgba-red-strong a:active, .paragraph--color--rgba-red-strong a:hover, .paragraph--color--rgba-red-strong a:focus {
+    color: #fff;
+    text-decoration: none; }
 
 .paragraph--type--xeno-hero__image {
   background-color: #fff;
