--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1268,7 +1268,8 @@ ol.breadcrumb {
     padding-top: 18px;
     border-top: 10px solid $lightest-gray;
   }
-  h2.center {
+  h2.center,
+  h3.center {
     text-align: center;
     margin-top: .5em;
   }
