Minor update: header and footer links

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -106,6 +106,7 @@
                   <li><a href="http://www8dev.vancouver.wsu.edu/campus-map-directions">Campus map</a></li>
                   <li><a href="http://wsuv.orgsync.com/">CougSync</a></li>
                   <li><a href="https://outlook.office365.com/owa/wsu.edu/">Email and Office 365</a></li>
+                  <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a>
                   <li><a href="http://www8dev.vancouver.wsu.edu/information-technology">Tech Support</a></li>
                 </ul>
@@ -117,6 +118,7 @@
                   <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/faculty-research-labs">Faculty research</a></li>
                   <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/graduate-programs">Graduate programs</a></li>
                   <li><a href="http://www8dev.vancouver.wsu.edu/academic-affairs/campus-initiatives">Initiatives</a></li>
+                  <li><a href="https://library.vancouver.wsu.edu">Library</a></li>                  
                   <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/resources-faculty">Proposals</a></li>
                   <li><a href="http://www8dev.vancouver.wsu.edu/research">Research home</a></li>
                 </ul>
@@ -186,7 +188,7 @@
   		<ul>
  			<li class="sitemap-section">Quick links</li>
 			<li><a href="http://www8dev.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
-			<li><a href="http://www8dev.vancouver.wsu.edu/">Administration</a></li>
+			<li><a href="http://www8dev.vancouver.wsu.edu/administrative-departments">Administrative Departments</a></li>
 			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
 			<li><a href="http://www8dev.vancouver.wsu.edu/human-resources/">Employment</a></li>
 			<li><a href="http://www8dev.vancouver.wsu.edu/events">Events Calendar</a></li>
