Google CSE code wrangling

--- a/css/style.css
+++ b/css/style.css
@@ -7594,7 +7594,7 @@ div.region.region-content > ol {
 .gs-bidi-start-align.gs-snippet {
   font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
   font-size: 1.25em;
-  margin-left: -1em; }
+  margin-left: 0; }
 
 /* SHARE BUTTONS BLOCK */
 #atstbx .at-share-btn-elements {
