--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1615,7 +1615,7 @@ div.region.region-content > ol {
 .gs-bidi-start-align.gs-snippet {
   font-family: $font-family-sans-serif;
   font-size: 1.25em;
-  margin-left: -1em;
+  margin-left: 0;
 }
 
 /* SHARE BUTTONS BLOCK */
