Major: Google CSE results cleanup
Removed any elements that were difficult to modify with stubborn inline CSS that served a strictly informational purpose i.e. number of results, time query served, etc.

--- a/css/style.css
+++ b/css/style.css
@@ -7550,9 +7550,10 @@ div.region.region-content > ol {
 
 #gsc-iw-id1 {
   height: 50px;
-  font-size: 2em; }
+  font-size: 2em;
+  padding-left: 10px; }
 
-#___gcse_0 > div > div > form {
+#___gcse_0 > div {
   margin-left: 1em; }
 
 #gs_cb50 {
@@ -7565,10 +7566,16 @@ div.region.region-content > ol {
   vertical-align: top;
   margin-top: -1.5em; }
 
+table.gsc-search-box td {
+  padding: 0; }
+
 .gsst_a {
   margin-right: -1em; }
 
 .gsib_b {
+  display: none; }
+
+#resInfo-0 {
   display: none; }
 
 .gsc-search-button {
@@ -7579,6 +7586,12 @@ div.region.region-content > ol {
   width: 50px;
   height: 50px;
   padding: .5em; }
+
+.gsc-above-wrapper-area {
+  margin-right: 1em; }
+
+#___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div > table > tbody > tr > td.gsc-twiddleRegionCell.gsc-twiddle-opened {
+  display: none; }
 
 .gsc-webResult .gsc-result:hover {
   margin-left: -1px;
@@ -7595,6 +7608,15 @@ div.region.region-content > ol {
   font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
   font-size: 1.25em;
   margin-left: 0; }
+
+#___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div > div > div.gsc-expansionArea > div.gsc-cursor-box.gs-bidi-start-align {
+  display: none; }
+
+#___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div > div > div.gcsc-more-maybe-branding-root {
+  margin-top: 5em; }
+
+#___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div > div > div.gcsc-more-maybe-branding-root > a > div {
+  display: none; }
 
 /* SHARE BUTTONS BLOCK */
 #atstbx .at-share-btn-elements {
