Adjust button margin on view filters

--- a/css/style.css
+++ b/css/style.css
@@ -7090,7 +7090,7 @@ li.node-readmore,
   margin-left: -25px; }
 
 .view-filters .form-submit {
-  margin-top: 1.2em;
+  margin-top: -.75em;
   margin-left: 1em; }
 
 .btn-info {
