--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -103,12 +103,10 @@
                   <li><a href="http://registrar.wsu.edu/academic-calendar">Academic calendar</a></li>
                   <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/campus-map-directions">Campus map</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/campus-map-and-directions">Campus map</a></li>
                   <li><a href="http://wsuv.orgsync.com/">CougSync</a></li>
-                  <li><a href="https://outlook.office365.com/owa/wsu.edu/">Email and Office 365</a></li>
-                  <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
+                  <li><a href="http://office365.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/information-technology">Tech Support</a></li>
                 </ul>
             </li>
             <li class="dropdown">
@@ -117,10 +115,8 @@
                   <li><a href="http://www8dev.vancouver.wsu.edu/academic-affairs">Academic Affairs</a></li>
                   <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/faculty-research-labs">Faculty research</a></li>
                   <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/graduate-programs">Graduate programs</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/academic-affairs/campus-initiatives">Initiatives</a></li>
-                  <li><a href="https://library.vancouver.wsu.edu">Library</a></li>                  
                   <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/resources-faculty">Proposals</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/research">Research home</a></li>
+                  <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/resources-faculty">Research home</a></li>
                 </ul>
             </li>
             <li class="dropdown">
@@ -129,8 +125,7 @@
                   <li><a href="http://www8dev.vancouver.wsu.edu/alumni">Alumni home</a></li>
                   <li><a href="http://www8dev.vancouver.wsu.edu/development-alumni-relations/giving">Give to WSU</a></li>
                   <li><a href="http://www8dev.vancouver.wsu.edu/development-alumni-relations/get-involved">Get involved</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/alumni">Notable Alumni</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/development-alumni-relations/alumni-relations">Publications</a></li>
+                  <li><a href="http://www8dev.vancouver.wsu.edu/naa">Notable Alumni</a></li>
                 </ul>
             </li>
             <li class="dropdown">
@@ -138,11 +133,11 @@
                 <ul class="dropdown-menu">
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
                   <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
-                  <li><a href="https://directory.vancouver.wsu.edu">Directory</a></li>
-                  <li><a href="https://outlook.office365.com/owa/wsu.edu/">Email and Office 365</a></li>
+                  <li><a href="http://directory.vancouver.wsu.edu">Directory</a></li>
+                  <li><a href="http://office365.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/information-technology">Tech Support</a></li>
+                  <li><a href="https://admin.vancouver.wsu.edu/information-technology">Tech Support</a></li>
                 </ul>
             </li>
         </ul>
@@ -188,11 +183,12 @@
   		<ul>
  			<li class="sitemap-section">Quick links</li>
 			<li><a href="http://www8dev.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
-			<li><a href="http://www8dev.vancouver.wsu.edu/administrative-departments">Administrative Departments</a></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/access-center">Access Center</a></li>
+			<li><a href="http://admin8dev.vancouver.wsu.edu">Administration</a></li>
 			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
-			<li><a href="http://www8dev.vancouver.wsu.edu/human-resources/">Employment</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
+			<li><a href="http://www8dev.vancouver.wsu.edu/equity-diversity">Equity and Diversity</a></li>
 			<li><a href="http://www8dev.vancouver.wsu.edu/events">Events Calendar</a></li>
-			<li><a href="http://www8dev.vancouver.wsu.edu/parking-services">Parking Services</a></li>
       <li><a href="https://wsu.edu/about/statewide/">WSU Locations</a></li>
     	</ul>
   </div>
@@ -201,17 +197,18 @@
  			<li class="sitemap-section">Future Students</li>
 			<li><a href="http://8dev.vancouver.wsu.edu">Admissions</a></li>
       <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Majors and Programs</a></li>
-			<li><a href="http://8dev.vancouver.wsu.edu/financial-aid">Student Financial Services</a></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/financial-aid">Student Financial Services</a></li>
 			<li>&nbsp;</li>
 			<li class="sitemap-section">Current Students</li>
 			<li><a href="http://8dev.vancouver.wsu.edu/student-affairs/current-student-resources">A-Z Index</a></li>
-			<li><a href="http://8dev.vancouver.wsu.edu/osi">Student Involvement</a></li>
-			<li><a href="http://8dev.vancouver.wsu.edu/src">Student Resource Center</a></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/osi">Student Involvement</a></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/src">Student Resource Center</a></li>
     	</ul>
   </div>
   <div class="col-md-3">
   		<ul>
         <li class="sitemap-section">Campus Safety</li>
+			  <li><a href="http://www8dev.vancouver.wsu.edu/parking-services">Parking Services</a></li>
   			<li><a href="http://www8dev.vancouver.wsu.edu/public-safety">Public Safety</a></li>
   			<li><a href="http://www8dev.vancouver.wsu.edu/safety-plan">Safety Plan and Security Report</a></li>
         <li>&nbsp;</li>
@@ -250,7 +247,7 @@
   </div>
   <div class="col-md-6">
 		<ul>
-      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="http://www8dev.vancouver.wsu.edu/campus-map-directions">14204 NE Salmon Creek Ave, Vancouver, WA, 98686</a></li>
+      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="http://www8dev.vancouver.wsu.edu/campus-map-and-directions">14204 NE Salmon Creek Ave, Vancouver, WA, 98686</a></li>
       <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <a href="tel:+13605469788">360-546-9788</a></li>
     </ul>
   </div>
